# FileStorage

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev,yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: app-testing.yml
services/: nginx.conf
src/: alembic.ini  main.py
src/api/: healthcheck.py
src/api/v1/: file.py  user.py
src/cache/: redis.py  redis_utils.py
src/core/: config.py
src/db/: db.py
src/db/migrations/: env.py
src/db/models/: file.py  user.py
src/schemas/: file.py  user.py
src/services/: auth.py  base.py  directory.py  file.py  my_logger.py  user.py
src/utils/: auth.py  directory.py  file.py  filestorage.py
