[tool.poetry]
name = "filestorage"
version = "0.1.0"
description = ""
authors = ["Irina Fok <fokira@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.101.1"}
uvicorn = "^0.23.2"
pydantic = "^2.2.1"
mypy = "^1.5.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
flake8-broken-line = "^1.0.0"
flake8-return = "^1.2.0"
flake8-isort = "^6.0.0"
